--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,24 @@ services:
     # Подключенные тома.
     volumes:
       - ./service:/service
+    # Переменные среды
+    environment:
+      - DB_HOST=database
+      - DB_NAME=dbname
+      - DB_USER=dbuser
+      - DB_PASS=pass
+
 
     command: >
       sh -c "python3 manage.py runserver 0.0.0.0:8000"
+    # Указание зависимости (мы не должны запускать web-app раньше чем database)
+    depends_on:
+      - database
+
+  database:
+    image: postgres:14.6-alpine
+    # Переменные
+    environment:
+      - POSTGRES_DB=dbname
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=pass
